--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@
           <div class="advantages">
             <div class="textdiv">
               <div class="adv-header">Удобный дизайн</div>
-              <br />
               <div class="adv-text">
                 Очень простой и<br />
                 понятный, но<br />
@@ -95,7 +94,6 @@
           <div class="advantages central-block">
             <div class="textdiv">
               <div class="adv-header">CRM система</div>
-              <br />
               <div class="adv-text">
                 Абсолютное<br />
                 заимодействие с<br />
@@ -110,7 +108,6 @@
           <div class="advantages right-one">
             <div class="textdiv">
               <div class="adv-header">Поддержка 24/7</div>
-              <br />
               <div class="adv-text">
                 При возникновении<br />
                 каких-либо проблем,<br />
@@ -127,7 +124,6 @@
           <div class="advantages">
             <div class="textdiv">
               <div class="adv-header">Поток клиетов</div>
-              <br />
               <div class="adv-text">
                 Используя наше<br />
                 приложение, поток ваших<br />
@@ -143,7 +139,6 @@
           <div class="advantages central-block">
             <div class="textdiv">
               <div class="adv-header">Чат с клиентами</div>
-              <br />
               <div class="adv-text">
                 Вы сможете легко<br />
                 связаться со <br />своими клиентами<br />
@@ -158,7 +153,6 @@
           <div class="advantages right-one">
             <div class="textdiv">
               <div class="adv-header">Детальные отчеты</div>
-              <br />
               <div class="adv-text">
                 Отчеты о повышении<br />
                 или понижении<br />
@@ -230,7 +224,7 @@
               <li class="tabs-item">Возможность трудоустройства в салон</li>
               <li class="tabs-item">Онлайн-запись</li>
               <li class="tabs-item">Техническая поддержка 24/7</li>
-              <li class="tabs-item">Личный аккаунт-5енеджер</li>
+              <li class="tabs-item">Личный аккаунт-менеджер</li>
             </ul>
             <img src="img/angle wave.png" alt="wave" class="wave" />
           </div>
@@ -296,7 +290,7 @@
 
     <section class="register-block" id="register-block" align="center">
       <p class="register-heading">
-        Оформив предподписку всего за <font class="blue">500 ₸</font>, Вы получите скидку
+        Оформив предподписку всего за <font class="blue">500 ₸</font> Вы получите скидку
         <font  class="blue">50%</font> на трехмесячное использование после выхода приложения!
       </p>
       <button class="register-btn">Регистрация</button>
