--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <a href="#register-block"><button class="register-button">Регистрация</button></a>
       </header>
-      <div class="heading" id="heading" data-aos="fade-right" data-aos-delay="1000">
+      <div class="heading" id="heading" data-aos="fade-right" data-aos-delay="800">
         Полный контроль вашего бизнеса в одном приложении
       </div>
       <h2 class="subheading" data-aos="fade-right" data-aos-delay="1200">
@@ -41,6 +41,11 @@
       >
         Подробнее
       </button>
+         <img
+        src="img/undraw_mobile_ux_o0e1%202.png"
+        alt="Second-illustration"
+        class="second-illustration"
+      />
       <img
         src="img/first-illustration.png"
         alt="First-illustration"
@@ -367,7 +372,6 @@
         left: 0;
         width: 100%;
         height: 100%;
-        min-width: 1000px;
         background: #4183d7
           url(http://hello-site.ru//main/images/preloads/circles.svg) center
           center no-repeat;
@@ -397,7 +401,7 @@
       window.onload = function () {
         setTimeout(function () {
           fadeOutnojquery(hellopreloader);
-        }, 500);
+        }, 300);
       };
     </script>
     <!-- Preloader -->
