--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   </head>
   <body>
-    <section class="first-body">
+   <section class="first-body">
       <header class="header" data-aos="fade-down" data-aos-delay="900">
         <img src="" alt="Logo" class="logo" />
         <nav class="main-nav">
@@ -26,7 +26,7 @@
               <a href="#information" class="item-link">О нас</a>
               <a href="#instagram" class="item-link">Мы в соцсетях</a>
         </nav>
-        <a href="#register-block"><button class="register-button">Регистрация</button></a>
+         <a href="#register-block"><button class="register-button">Регистрация</button></a>
       </header>
       <div class="heading" id="heading" data-aos="fade-right" data-aos-delay="800">
         Полный контроль вашего бизнеса в одном приложении
@@ -50,6 +50,11 @@
         src="img/first-illustration.png"
         alt="First-illustration"
         class="first-illustration"
+      />
+        <img
+        src="img/undraw_mobile_ux_o0e1%202.png"
+        alt="Second-illustration"
+        class="second-illustration"
       />
     </section>
 
@@ -78,11 +83,12 @@
         </div>
       </div>
     </div>
-    <div class="thirdpart">
+
+     <div class="thirdpart">
       <div class="third-heading" data-aos="fade-down">Наши преимущества</div>
       <div class="advantage-content" data-aos="flip-down">
         <div class="advantage-block">
-          <div class="advantages">
+          <div class="advantages left-one">
             <div class="textdiv">
               <div class="adv-header">Удобный дизайн</div>
               <div class="adv-text">
@@ -171,37 +177,7 @@
         </div>
       </div>
     </div>
-    <div class="swiper-part">
-      <div class="screenshot" data-aos="zoom-in-up">Скриншоты</div>
-      <div class="swiper-container" id="salons">
-        <img class="iphone" src="img/Iphone.png" />
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="salon-card"></div>
-          </div>
-          <div class="swiper-slide">
-            <div class="salon-card" style="background-color: blue;">
-              Абылай
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="salon-card"></div>
-          </div>
-          <div class="swiper-slide">
-            <div class="salon-card"></div>
-          </div>
-          <div class="swiper-slide">
-            <div class="salon-card"></div>
-          </div>
-        </div>
-
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
-      </div>
-    </div>
-
-    <section class="tarif">
+        <section class="tarif">
       <div class="background"></div>
       <p class="t-heading" data-aos="zoom-out">Тарифы</p>
       <div class="tabs">
@@ -317,7 +293,7 @@
       <a href="https://instagram.com/dmagroup_startup?igshid=1vu1hswrdjosk"><button class="subscribe-button" data-aos="fade-up-left">Подписаться</button></a></div>
     </section>
 
-    <div class="divushka">
+     <div class="divushka">
       <div class="vyxod" data-aos="flip-down">До выхода приложения Book.It осталось:</div>
       <div class="countdown" data-aos="flip-up">
         <div class="time-section">
