--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
 
     <section class="contact">
       <img src="img/plane.png" alt="plane" class="plane" />
+        <a href="#register-block"><button class="contact-btn" data-aos="fade-up-left">Написать</button></a>
       <h1 class="contact-heading" data-aos="flip-right">Есть вопросы? Напишите нам!</h1>
     </section>
 
