--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
       </div>
-      <div class="advantage-content">
+      <div class="advantage-content"  data-aos="flip-down">
         <div class="advantage-block">
           <div class="advantages">
             <div class="textdiv">
