--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     </div>
     <section class="tarif">
       <div class="background"></div>
-      <p class="t-heading" data-aos="zoom-out">Тарифы</p>
+      <p class="t-heading" data-aos="zoom-in">Тарифы</p>
       <div class="tabs">
         <div class="tabs-button t-salons active" data-aos="flip-down">
           Салоны
@@ -331,7 +331,7 @@
 
     <section class="contact">
       <img src="img/plane.png" alt="plane" class="plane" />
-      <a href="#register-block"><button class="contact-btn" data-aos="fade-up-left">Написать</button></a>
+      <a href="#register-block"><button class="contact-btn" data-aos="fade-up">Написать</button></a>
       <h1 class="contact-heading" data-aos="flip-right">
         Есть вопросы? Напишите нам!
       </h1>
@@ -340,7 +340,7 @@
     <section class="instagram" id="instagram">
       <img src="img/i-phone.png" alt="i-phone" class="i-phone" />
       <div class="instagram-text">
-        <h1 class="i-heading" data-aos="fade-down-left">
+        <h1 class="i-heading" data-aos="fade-down">
           Подпишитесь на нас<br />
           в Instagram!
         </h1>
@@ -349,7 +349,7 @@
           приложении? Все это ждет Вас в нашем Instagram!
         </p>
         <a href="https://instagram.com/dmagroup_startup?igshid=1vu1hswrdjosk"
-          ><button class="subscribe-button" data-aos="fade-up-left">
+          ><button class="subscribe-button" data-aos="fade-up">
             Подписаться
           </button></a
         >
