--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <div
         class="heading"
         id="heading"
-        data-aos="fade-right"
+        data-aos="fade-up"
         data-aos-delay="800"
       >
         Полный контроль вашего бизнеса в одном приложении
       </div>
-      <h2 class="subheading" data-aos="fade-right" data-aos-delay="1200">
+      <h2 class="subheading" data-aos="fade-down" data-aos-delay="1200">
         Легко. Быстро. Эффективно.
       </h2>
       <button
         class="more-button"
-        data-aos="fade-up-right"
+        data-aos="zoom-in"
         data-aos-delay="1300"
       >
         Подробнее
@@ -68,7 +68,7 @@
     <div class="secondpart" id="information">
       <div class="description" id="description">
         <div class="blockkk">
-          <div class="desimg" data-aos="fade-right">
+          <div class="desimg" data-aos="fade-up">
             <img
               src="img/undraw_mobile_ux_o0e1%201.png"
               alt="d-image"
@@ -76,10 +76,10 @@
             />
           </div>
           <div class="d-info">
-            <div class="d-heading" id="d-heading" data-aos="fade-left">
+            <div class="d-heading" id="d-heading" data-aos="fade-up">
               Что такое Book.It?
             </div>
-            <div class="d-text" data-aos="fade-left">
+            <div class="d-text" data-aos="fade-up">
               Book.It - инновационный маркетплейс<br />
               заведений сферы красоты и здоровья<br />
               в Казахстане. Благодаря ему Ваша<br />
@@ -344,7 +344,7 @@
           Подпишитесь на нас<br />
           в Instagram!
         </h1>
-        <p class="i-text" data-aos="fade-left">
+        <p class="i-text" data-aos="flip-left">
           Хотите узнавать много нового из <br />мира красоты и о нашем
           приложении? Все это ждет Вас в нашем Instagram!
         </p>
