--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <div class="textdiv">
               <div class="adv-header">Удобный дизайн</div>
               <div class="adv-text">
-                Очень простой и<br />
-                понятный, но<br />
-                красивый <br />интерфейс
+                Очень простой и<br>
+                понятный, но<br>
+                красивый <br>интерфейс
               </div>
             </div>
             <img class="smallimgs" src="img/mobile.png" />
