--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale = 1.0, 
+maximum-scale=1.0, user-scalable=no" /> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book.it</title>
     <link
@@ -99,9 +101,9 @@
             <div class="textdiv">
               <div class="adv-header">Удобный дизайн</div>
               <div class="adv-text">
-                Очень простой и<br>
-                понятный, но<br>
-                красивый <br>интерфейс
+                Очень простой и<br />
+                понятный, но<br />
+                красивый <br />интерфейс
               </div>
             </div>
             <img class="smallimgs" src="img/mobile.png" />
